SF Primes/src/objects/Product_Solutions__c.object
<CustomObject>
    <description>List of product solutions for ADP products that a dealer currently has</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001m5qKEAQ</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Backlog_Monthlies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Backlog Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMFs__c</fullName>
        <label>CMFs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ComplexID__c</fullName>
        <description>Product Solution ID + Account ID</description>
        <externalId>true</externalId>
        <label>ComplexID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Current_Monthlies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Recurring Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>department of dealership</description>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Monthly_Transactions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Current Monthly Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Solution_Name__c</fullName>
        <label>Solution Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Current_Monthlies__c</fullName>
        <formula>Current_Monthlies__c   +  Monthly_Transactions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Current Monthlies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WEBIDs__c</fullName>
        <label>WEBIDs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Current Product Solutions at Dealership</label>
    <nameField>
        <displayFormat>ID {00000}</displayFormat>
        <label>Product Solution</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Current Product Solutions at Dealerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>